--- a/app/globals.css
+++ b/app/globals.css
@@ -7,10 +7,15 @@
   --foreground: #ededed;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 @layer utilities {
